New: mass endpoint
